[tool.poetry]
name = "with_poetry"
version = "0.1.0"
description = ""
authors = ["Daniil <danielmt.dm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0"
selene ="^2.0.b4"

[tool.poetry.dev-dependencies]
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"